# BayHunter2025

./: .gitignore  README.md  install_bayhunter_old.sh  pyproject.toml  pyproject_progress.toml  requirements.txt  setup.py
my_stuff/: InvDef.py  batch_bayhunter_plots.py  config.ini  config_test.ini  upflow.txt  utils.py
src/: Models.py  Plotting.py  SingleChain.py  mcmcOptimizer.py  mcmcOptimizer_mac.py  rfmini_modrf.py
src/extensions/rfmini/: rfmini.c
tutorial/: baywatch.pkl  tutorialhunt.py
