[build-system]
requires = [
  "setuptools>=68",   # modern setuptools for Python >=3.12
  "wheel>=0.41",
  "Cython>=3.0",
  "numpy>=2.0",
  "meson>=1.3",
  "ninja>=1.10",
]
build-backend = "setuptools.build_meta"

[project]
name = "BayHunter"
version = "2.1"
description = "Transdimensional Bayesian Inversion of RF and/or SWD."
authors = [
  { name = "Jennifer Dreiling", email = "jennifer.dreiling@gfz-potsdam.de" }
]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" } # or the correct license if different
keywords = ["bayesian", "inversion", "seismology", "RF", "SWD"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "configobj==5.0.9",
  "contourpy==1.3.3",
  "cycler==0.12.1",
  "Cython==3.1.4",
  "fonttools==4.60.0",
  "kiwisolver==1.4.9",
  "matplotlib==3.10.6",
  "numpy==2.3.3",
  "packaging==25.0",
  "pillow==11.3.0",
  "pyparsing==3.2.5",
  "python-dateutil==2.9.0.post0",
  "pyzmq==27.1.0",
  "scipy==1.16.2",
  "six==1.17.0",
  "pandas==2.3.3",
  "cartopy=0.25.0"
]
